--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 					<div class="single_about">
 						<img src="assets/img/icon/trading.png" alt="image" />
 						<h3>Instant crypto trading</h3>
-						<p>Buy crypto with your debit/credit card. Instant deposit and withdrawal.</p>
+						<p>Buy crypto with your debit/credit card. Instant deposit.</p>
 					</div>
 				</div><!-- END COL -->
 				<div class="col-lg-4 col-sm-12 col-xs-12 wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.2s"
@@ -187,29 +187,30 @@
 	<section id="buy_sell" class="buy_sell_area section-padding">
 		<div class="container">
 			<div class="section-title text-center">
-				<h1>How to Buy and Sell Cryptocurrency</h1>
-				<p>It is a long established fact that a reader will be distracted by the readable content of a page when
-					looking at its layout.</p>
+				<h1>Explore more with smart digital & NFT ticketing on Qroni Swap</h1>
+				<!-- <p>It is a long established fact that a reader will be distracted by the readable content of a page when
+					looking at its layout.</p> -->
 			</div>
 			<div class="row">
 				<div class="col-lg-4 col-sm-12 col-xs-12 wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.2s"
 					data-wow-offset="0">
 					<div class="buy_sell_list">
 						<img src="assets/img/icon/bank.png" alt="image" />
-						<h4>Bank Transfers</h4>
-						<p>There are many variations of passages of Lorem Ipsum the majority.</p>
+						<h4>Interactive NFT marketplace; trivial gas fees</h4>
+						<p>Our underlying Binance Smart Chain (BSC) blockchain makes it seamless to mint and trade NFTs
+							at very low gas.</p>
 					</div>
 					<div class="buy_sell_list">
 						<img src="assets/img/icon/wallet.png" alt="image" />
-						<h4>Online Wallets</h4>
-						<p>There are many variations of passages of Lorem Ipsum the majority.</p>
+						<h4>Buy, Sell, and Re-sell Digital Tickets</h4>
+						<p>Trade NFT tickets with the latest blockchain technology that shields you from fraud.</p>
 					</div>
 				</div>
 				<!--- END COL -->
 				<div class="col-lg-4 col-sm-12 col-xs-12 wow fadeInDown" data-wow-duration="1s" data-wow-delay="0.2s"
 					data-wow-offset="0">
 					<div class="portfolio_list_img">
-						<img src="assets/img/about-one.png" class="img-fluid" alt="" />
+						<img src="assets/img/icon/staking.jpg" class="img-fluid" alt="" />
 					</div>
 				</div>
 				<!--- END COL -->
@@ -217,16 +218,19 @@
 					data-wow-offset="0">
 					<div class="buy_sell_list">
 						<img src="assets/img/icon/cash.png" alt="image" />
-						<h4>Cash Payment</h4>
-						<p>There are many variations of passages of Lorem Ipsum the majority.</p>
+						<h4>NFT Staking</h4>
+						<p>Stake your NFTs. Earn exciting rewards.</p>
 					</div>
-					<div class="buy_sell_list">
+					<!-- <div class="buy_sell_list">
 						<img src="assets/img/icon/debit.png" alt="image" />
 						<h4>Debit/Credit Cards</h4>
 						<p>There are many variations of passages of Lorem Ipsum the majority.</p>
-					</div>
+					</div> -->
 				</div>
 				<!--- END COL -->
+				<div class="getStartedBtn_center">
+					<a class="btn_two" href="#">Get Started</a>
+				</div>
 			</div>
 			<!--- END ROW -->
 		</div>
@@ -238,39 +242,15 @@
 	<section class="how_to_buy_area section-padding">
 		<div class="container">
 			<div class="section-title text-center">
-				<h1>Get Started in a Few Minutes</h1>
-				<p>It is a long established fact that a reader will be distracted by the readable content of a page when
-					looking at its layout.</p>
+				<h1>Qroni Swap pools reward you abundantly!</h1>
+				<p style="font-size: 25px; line-height: 35px; margin-bottom: 20px;">Trade [and stake] Qroni (QNI), Vince Token (VCE), PINKSALE, & many more on BNB Smart Chain, Ethereum, Solana.</p>
+				<p>Simply connect your wallet or buy/sell with a credit/debit card. Secure, fast, and easy!</p>
 			</div>
-			<div class="row text-center">
-				<div class="col-lg-4 col-sm-12 col-xs-12 wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.2s"
-					data-wow-offset="0">
-					<div class="single_how_to_buy">
-						<img src="assets/img/icon/man.png" alt="image" />
-						<h4>Create Account</h4>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.
-						</p>
-					</div>
-				</div><!-- END COL -->
-				<div class="col-lg-4 col-sm-12 col-xs-12 wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.3s"
-					data-wow-offset="0">
-					<div class="single_how_to_buy">
-						<img src="assets/img/icon/bank2.png" alt="image" />
-						<h4>Link Your Bank Account</h4>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.
-						</p>
-					</div>
-				</div><!-- END COL -->
-				<div class="col-lg-4 col-sm-12 col-xs-12 wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.4s"
-					data-wow-offset="0">
-					<div class="single_how_to_buy">
-						<img src="assets/img/icon/buy.png" alt="image" />
-						<h4>Start Buying & Selling</h4>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.
-						</p>
-					</div>
-				</div><!-- END COL -->
-			</div><!-- END ROW -->
+			<div class="home_btn getStartedBtn_center">
+				<a href="#" class="btn_two">Start Trading</a>
+				<a href="#" class="btn_one">Learn More</a>
+			</div>
+			
 		</div><!-- END CONTAINER -->
 	</section>
 	<!-- END HOW TO BUY  -->
