--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 				<!--- END COL -->
 				<div class="col-lg-5 col-sm-12 col-xs-12 text-center">
 					<div class="hero_img">
-						<img src="./assets/img/faq.png" alt="">
+						<img src="./assets/img/hero_img.png" alt="">
 					</div>
 					<!-- <div class="buy-icons">
 						<div class="ca-starts-in">
@@ -243,14 +243,15 @@
 		<div class="container">
 			<div class="section-title text-center">
 				<h1>Qroni Swap pools reward you abundantly!</h1>
-				<p style="font-size: 25px; line-height: 35px; margin-bottom: 20px;">Trade [and stake] Qroni (QNI), Vince Token (VCE), PINKSALE, & many more on BNB Smart Chain, Ethereum, Solana.</p>
+				<p style="font-size: 25px; line-height: 35px; margin-bottom: 20px;">Trade [and stake] Qroni (QNI), Vince
+					Token (VCE), PINKSALE, & many more on BNB Smart Chain, Ethereum, Solana.</p>
 				<p>Simply connect your wallet or buy/sell with a credit/debit card. Secure, fast, and easy!</p>
 			</div>
 			<div class="home_btn getStartedBtn_center">
 				<a href="#" class="btn_two">Start Trading</a>
 				<a href="#" class="btn_one">Learn More</a>
 			</div>
-			
+
 		</div><!-- END CONTAINER -->
 	</section>
 	<!-- END HOW TO BUY  -->
@@ -269,16 +270,19 @@
 				<div class="col-lg-6 col-sm-12 col-xs-12 wow fadeInRight" data-wow-duration="1s" data-wow-delay="0.2s"
 					data-wow-offset="0">
 					<div class="about-text">
-						<h2>Build the future <br />of finance</h2>
-						<p class="about-bold">We offers users a fully operational long-term rental platform. It plans to
-							leverages blockchain technology to ensure embarrassing hidden seamless.</p>
-						<p>There are many variations of passages of Lorem Ipsum available, but the majority have
-							suffered alteration in some form, by injected humour, or randomised words which don't look
-							even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be
-							sure there isn't anything embarrassing hidden in the middle of text.</p>
+						<h2>Join the rest of the world in building a greener decentralized future</h2>
+						<p class="about-bold">Qroni Swap is your one-stop decentralized marketplace to mint and trade
+							your favorite cryptocurrencies and NFTs across multiple blockchains. No carbon footprints,
+							high scalability.</p>
+						<p>Qroni Swap boasts the latest technology for creating, managing, and distributing digital
+							tickets [NFTs] with immutable data on the blockchain.</p>
+						<p>You have a large pool of assets to trade or swap, at low fees, and at a super-fast finality
+							rate. The more you trade and stake (NFTs and crypto) in Qroni Swap pools, the more you earn
+							sweet rewards.</p>
 					</div>
 					<div class="about_btn">
-						<a href="https://www.youtube.com/watch?v=CMPebxJjE8o" class="video-play btn_one">Watch Video</a>
+						<a href="#" class="btn_two">There’s more!</a>
+						<!-- <a href="https://www.youtube.com/watch?v=CMPebxJjE8o" class="video-play btn_one">Watch Video</a> -->
 					</div>
 				</div>
 				<!--- END COL -->
@@ -402,9 +406,9 @@
 	<section id="roadmap" class="roadmap_area section-padding">
 		<div class="container">
 			<div class="section-title text-center">
-				<h1>Roadmap</h1>
-				<p>It is a long established fact that a reader will be distracted by the readable content of a page when
-					looking at its layout.</p>
+				<h1>Qroni Swap Roadmap </h1>
+				<p>(The Qroni team may extend the roadmap as they wish and include dates of possible completion or
+					milestone)</p>
 			</div>
 			<div class="row">
 				<div class="col-lg-12 col-sm-12 col-xs-12">
@@ -412,36 +416,56 @@
 						<div class="time_contain time_left wow fadeInLeft" data-wow-duration="1s" data-wow-delay="0.2s"
 							data-wow-offset="0">
 							<div class="time_content">
-								<h2>Project Idea - <span>July, 2021</span></h2>
-								<p>We offers users a fully operational long-term rental platform. It plans to leverages
-									blockchain technology to ensure embarrassing hidden seamless.</p>
+								<!-- <h2>Project Idea - <span>July, 2021</span></h2> -->
+								<h2>Stage One</h2>
+
+								<li>Web application launch</li>
+								<li>Private token sale</li>
+								<li>Private NFT sale</li>
+								<li>Beta testing</li>
+
 							</div>
 						</div>
 						<div class="time_contain time_right wow fadeInRight" data-wow-duration="1s"
 							data-wow-delay="0.2s" data-wow-offset="0">
 							<div class="time_content">
-								<h2>Business Conception - <span>Aug, 2021</span></h2>
-								<p>We offers users a fully operational long-term rental platform. It plans to leverages
-									blockchain technology to ensure embarrassing hidden seamless.</p>
+								<!-- <h2>Business Conception - <span>Aug, 2021</span></h2> -->
+								<h2>Stage Two</h2>
+
+								<li>Multi-chain DEX partnership & integration</li>
+								<li>Fiat on-ramp integration</li>
+								<li>Raffle draw </li>
 							</div>
 						</div>
 						<div class="time_contain time_left wow fadeInLeft" data-wow-duration="1s" data-wow-delay="0.4s"
 							data-wow-offset="0">
 							<div class="time_content">
-								<h2>Legal Review - <span>Sep, 2021</span></h2>
-								<p>We offers users a fully operational long-term rental platform. It plans to leverages
-									blockchain technology to ensure embarrassing hidden seamless.</p>
+								<!-- <h2>Legal Review - <span>Sep, 2021</span></h2> -->
+								<h2>Stage Three</h2>
+
+								<li>CEX listing</li>
+								<li>NFT series launch</li>
+								<li>QroniLock launch</li>
+								<li>NFT ticketing</li>
+								<li>Ethereum and Solana cross-chain launch</li>
 							</div>
 						</div>
 						<div class="time_contain time_right wow fadeInRight" data-wow-duration="1s"
 							data-wow-delay="0.5s" data-wow-offset="0">
 							<div class="time_content">
-								<h2>Token Sale and Marketing - <span>Oct, 2021</span></h2>
-								<p>We offers users a fully operational long-term rental platform. It plans to leverages
-									blockchain technology to ensure embarrassing hidden seamless.</p>
+								<!-- <h2>Token Sale and Marketing - <span>Oct, 2021</span></h2> -->
+								<h2>Stage Four</h2>
+
+								<li>Ticketing for blockchain events</li>
+								<li>White labeling</li>
+								<li>Multi-chain NFT marketplace launch</li>
+								<li>Brand Partnerships</li>
+								<li>Mobile app launch</li>
+								<li>Multi-layer ID integration</li>
+								<li>Qroni launchpad Integration</li>
 							</div>
 						</div>
-						<div class="time_contain time_left wow fadeInLeft" data-wow-duration="1s" data-wow-delay="0.6s"
+						<!-- <div class="time_contain time_left wow fadeInLeft" data-wow-duration="1s" data-wow-delay="0.6s"
 							data-wow-offset="0">
 							<div class="time_content">
 								<h2>ICO and Token Design - <span>Nov, 2021</span></h2>
@@ -456,7 +480,7 @@
 								<p>We offers users a fully operational long-term rental platform. It plans to leverages
 									blockchain technology to ensure embarrassing hidden seamless.</p>
 							</div>
-						</div>
+						</div> -->
 					</div>
 				</div>
 				<!--- END COL -->
@@ -503,88 +527,13 @@
 	</section>
 	<!-- END DOWNLOAD APP -->
 
-	<!-- START TEAM -->
-	<section id="team" class="team_member section-padding">
-		<div class="container">
-			<div class="section-title text-center">
-				<h1>Meet our Professionals</h1>
-				<p>It is a long established fact that a reader will be distracted by the readable content of a page when
-					looking at its layout.</p>
-			</div>
-			<div class="row text-center">
-				<div class="col-lg-3 col-sm-6 col-xs-12 wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.2s"
-					data-wow-offset="0">
-					<div class="our-team">
-						<img src="assets/img/team/team1.jpg" class="img-fluid" alt="board-image">
-						<h3>Charles Martin</h3>
-						<ul>
-							<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-							<li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-							<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-						</ul>
-						<span>Crypto Developer</span>
-					</div>
-				</div>
-				<!--- END COL -->
-				<div class="col-lg-3 col-sm-6 col-xs-12 wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.3s"
-					data-wow-offset="0">
-					<div class="our-team">
-						<img src="assets/img/team/team2.jpg" class="img-fluid" alt="board-image">
-						<h3>Kathleen Hall</h3>
-						<ul>
-							<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-							<li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-							<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-						</ul>
-						<span>Crypto Developer</span>
-					</div>
-				</div>
-				<!--- END COL -->
-				<div class="col-lg-3 col-sm-6 col-xs-12 wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.4s"
-					data-wow-offset="0">
-					<div class="our-team">
-						<img src="assets/img/team/team3.jpg" class="img-fluid" alt="board-image">
-						<h3>Mildred Watson</h3>
-						<ul>
-							<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-							<li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-							<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-						</ul>
-						<span>Crypto Developer</span>
-					</div>
-				</div>
-				<!--- END COL -->
-				<div class="col-lg-3 col-sm-6 col-xs-12 wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.5s"
-					data-wow-offset="0">
-					<div class="our-team">
-						<img src="assets/img/team/team4.jpg" class="img-fluid" alt="board-image">
-						<h3>Helen Petersen</h3>
-						<ul>
-							<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-							<li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-							<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-						</ul>
-						<span>Crypto Developer</span>
-					</div>
-				</div>
-				<!--- END COL -->
-				<div class="col-lg-3 col-sm-6 col-xs-12"></div>
-				<!--- END COL -->
-
-			</div>
-			<!--- END ROW -->
-		</div>
-		<!--- END CONTAINER -->
-	</section>
-	<!-- END TEAM -->
 
 	<!-- START PARTNER -->
 	<div class="partner_area section-padding">
 		<div class="container">
 			<div class="section-title text-center">
 				<h1>Partners & Supporters</h1>
-				<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
-					alteration in some form.</p>
+				<p>We Partner With Industry-Leading Figures and Brands</p>
 			</div>
 			<div class="row text-center">
 				<div class="col-lg-3 col-sm-4 col-xs-12 wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.1s"
@@ -646,8 +595,8 @@
 		<div class="container">
 			<div class="section-title text-center">
 				<h1>Frequently Asked Questions</h1>
-				<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
-					alteration in some form.</p>
+				<!-- <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+					alteration in some form.</p> -->
 			</div>
 			<div class="row justify-content-center">
 				<div class="col-lg-7 col-sm-12 col-xs-12 wow fadeInLeft" data-wow-duration="1s" data-wow-delay="0.2s"
@@ -657,15 +606,16 @@
 							<h2 class="accordion-header" id="headingOne">
 								<button class="accordion-button" type="button" data-bs-toggle="collapse"
 									data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-									What is cryptocurrency?
+									What is Qroni Swap?
 								</button>
 							</h2>
 							<div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
 								data-bs-parent="#accordionExample">
 								<div class="accordion-body">
-									There are many variations of passages of Lorem Ipsum available, but the majority
-									have suffered alteration in some form, by injected humour, or randomised words which
-									don't look even slightly believable.
+									Qroni Swap is a decentralized ecosystem offering crypto trading, NFT trading and
+									staking, yield farming, creation and marketing of digital tickets, and many more
+									exciting protocols in the DeFi and NFTfi space. Qroni Swap is powered by the $QNI
+									token.
 								</div>
 							</div>
 						</div>
@@ -673,15 +623,14 @@
 							<h2 class="accordion-header" id="headingTwo">
 								<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
 									data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-									What are the best cryptocurrency for buy?
+									What blockchain does Qroni Swap operate?
 								</button>
 							</h2>
 							<div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
 								data-bs-parent="#accordionExample">
 								<div class="accordion-body">
-									There are many variations of passages of Lorem Ipsum available, but the majority
-									have suffered alteration in some form, by injected humour, or randomised words which
-									don't look even slightly believable.
+									Qroni Swap runs on the Binance Smart Chain (BSC) network. Its native cryptocurrency,
+									$QNI, is a BEP-20 token.
 								</div>
 							</div>
 						</div>
@@ -689,15 +638,13 @@
 							<h2 class="accordion-header" id="headingThree">
 								<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
 									data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-									How to buy cryptocurrency?
+									What is the total supply of Qroni Token (QNI)?
 								</button>
 							</h2>
 							<div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
 								data-bs-parent="#accordionExample">
 								<div class="accordion-body">
-									There are many variations of passages of Lorem Ipsum available, but the majority
-									have suffered alteration in some form, by injected humour, or randomised words which
-									don't look even slightly believable.
+									There can be only 2,000,000 Qroni Tokens (QNI) available.
 								</div>
 							</div>
 						</div>
@@ -705,15 +652,48 @@
 							<h2 class="accordion-header" id="headingFour">
 								<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
 									data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-									How to sell cryptocurrency?
+									How does Qroni NFT ticketing work?
 								</button>
 							</h2>
 							<div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour"
 								data-bs-parent="#accordionExample">
 								<div class="accordion-body">
-									There are many variations of passages of Lorem Ipsum available, but the majority
-									have suffered alteration in some form, by injected humour, or randomised words which
-									don't look even slightly believable.
+									Qroni NFT ticketing allows event planners and organizers to create, sell, and
+									re-sell digital tickets to their fans using blockchain technology and NFTfi systems.
+									The unique data on each ticket is registered on the blockchain allowing only one
+									party to hold a ticket at a time. The holders of the ticket can access and use their
+									tickets using their unique private keys and authorization signature after purchasing
+									them.
+								</div>
+							</div>
+						</div>
+						<div class="accordion-item">
+							<h2 class="accordion-header" id="headingFive">
+								<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+									data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+									Who can create NFT tickets on Qroni Swap?
+								</button>
+							</h2>
+							<div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive"
+								data-bs-parent="#accordionExample">
+								<div class="accordion-body">
+									Anyone with the Qroni Token (QNI) can create NFT tickets and market them within the
+									Qroni Ecosystem and beyond.
+								</div>
+							</div>
+						</div>
+						<div class="accordion-item">
+							<h2 class="accordion-header" id="headingSix">
+								<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+									data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
+									Does Qroni Swap accept credit/debit cards?
+								</button>
+							</h2>
+							<div id="collapseSix" class="accordion-collapse collapse" aria-labelledby="headingSix"
+								data-bs-parent="#accordionExample">
+								<div class="accordion-body">
+									Yes. Qroni Swap accepts credit and debit cards for buying and selling digital assets
+									on its platform.
 								</div>
 							</div>
 						</div>
@@ -735,9 +715,9 @@
 	<section id="blog" class="blog_area section-padding">
 		<div class="container">
 			<div class="section-title text-center">
-				<h1>In the News</h1>
-				<p>It is a long established fact that a reader will be distracted by the readable content of a page when
-					looking at its layout.</p>
+				<h1>We love to share what we’re doing!</h1>
+				<p>See our latest announcements, blogs, articles, and guides tailored to assist you in understanding how
+					we are building our next-generation ecosystem.</p>
 			</div>
 			<div class="row text-center">
 				<div class="col-lg-4 col-sm-6 col-xs-12 wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.1s"
@@ -788,7 +768,8 @@
 				<div class="col-lg-8 offset-lg-2 col-sm-12 col-xs-12 text-center wow fadeInDown" data-wow-duration="1s"
 					data-wow-delay="0.2s" data-wow-offset="0">
 					<div class="newsletter_form">
-						<h4>Subscribe our newsletter for get updates <br />We don't make any spam</h4>
+						<h4>Be the first to know our next move!</h4>
+						<h2>Subscribe our newsletter for get updates <br />We don't make any spam</h2>
 						<form action="#">
 							<input type="text" class="subscribe__input" placeholder="Email Address">
 							<button type="button" class="btn_one">Subscribe</button>
