--- a/index.html
+++ b/index.html
@@ -702,7 +702,7 @@
 				<div class="col-lg-5 col-sm-12 col-xs-12 wow fadeInRight" data-wow-duration="1s" data-wow-delay="0.3s"
 					data-wow-offset="0">
 					<div class="faq-img">
-						<img src="assets/img/faq.png" class="img-fluid" alt="faq image" />
+						<img src="assets/img/FAQs-amico.png" class="img-fluid" alt="faq image" />
 					</div>
 				</div><!-- END COL  -->
 			</div>
